--- a/src/views/app.html
+++ b/src/views/app.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nuntius</title>
+    <title>Express chat</title>
 
     <link id="THEME" rel="stylesheet" href="/css/site_dark.css">
 
@@ -16,7 +16,7 @@
 <body>
     <div id="login_container" tabindex="0">
         <div id="login_screen">
-            <h1>Nuntius</h1>
+            <h1>Express-chat</h1>
             <form id="loginform">
                 <label for="username">Username:</label>
                 <input type="text" id="loginform-username" autocomplete="on" maxlength="30" value="Guest" ><br><br>
@@ -30,7 +30,7 @@
     </div>
     <div id="loading_container">
         <div id="loading_text">
-            <h2>Nuntius is loading</h2>
+            <h2>Express-chat is loading</h2>
             <p id="loading_text_details"></p>
         </div>
     </div>
